--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
-<!-- Index -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/mirotone@2.0.0/dist/styles.css"
-    />
-    <link rel="stylesheet" href="/src/styles/style.css" />
-    <!-- Miro SDK -->
+    <link rel="stylesheet" href="/src/assets/style.css" />
     <script src="https://miro.com/app/static/sdk/v2/miro.js"></script>
+    <title>Miro</title>
   </head>
-
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div class="grid container">
+      <div class="cs1 ce12">
+        <img src="/src/assets/welcome.png" alt="" />
+      </div>
+      <div class="cs1 ce12">
+        <h1>Great, your app is running locally</h1>
+        <p>
+          You can now create your Developer team to get your app running in
+          Miro.
+        </p>
+      </div>
+      <div class="cs1 ce12">
+        <a
+          class="button button-primary"
+          href="https://developers.miro.com/docs/create-a-developer-team"
+          target="_blank"
+        >
+          Create a Developer team
+        </a>
+      </div>
+    </div>
+    <script type="module" src="/src/index.js"></script>
   </body>
 </html>
