--- a/app.html
+++ b/app.html
@@ -92,10 +92,22 @@
         </div>
       </div>
       <div class="tab-pane fade" id="nav-flow" role="tabpanel" aria-labelledby="flow-tab">
-        
+        <div class="container m-0 px-3 py-4 bg-transparent">
+          <p class="caveat">Note: this is an extremely simplified version of CPT, which only consists of implementation strategy and distal implementation outcome</p>
+          <form class="pt-3">
+            <div class="form-group pb-4">
+              <label for="strategy" class="question">How is the implementation strategy operationally defined?</label>
+              <input type="text" class="form-control answer" id="strategy" placeholder="Implementation strategy">
+            </div>
+            <div class="form-group">
+              <label for="outcome" class="question">What is the desired outcome of this implementation?</label>
+              <input type="text" class="form-control answer" id="outcome" placeholder="Distal implementation outcome">
+            </div>
+            <button class="btn btn-primary mt-4 miro-draggable" style="font-size: 12px !important; font-weight: 400 !important; float: right;" id="7">Drag & Drop<br>to generate CPD</button>
+          </form>
+        </div>
       </div>
   </div>
-    
     <script type="module" src="/src/app.js"></script>
   </body>
 </html>
@@ -108,6 +120,28 @@
   margin-bottom: 5px !important;
   text-align: center;
 }
+.question {
+  font-size: 13px !important;
+  font-weight: 600;
+  line-height: 15px;
+  margin-bottom: 10px !important;
+}
+.answer {
+  font-size: 13px !important;
+}
+
+.answer::placeholder {
+  font-size: 13px !important;
+  opacity: 0.5;
+}
+.caveat {
+  font-weight: 500;
+  color: #999;
+  font-size: 11px;
+  line-height: 14px;
+  font-style: italic;
+}
+
 .rect {
   fill: transparent;
   stroke-width: 1;
