--- a/app.html
+++ b/app.html
@@ -97,11 +97,11 @@
           <form class="pt-3">
             <div class="form-group pb-4">
               <label for="strategy" class="question">How is the implementation strategy operationally defined?</label>
-              <input type="text" class="form-control answer" id="strategy" placeholder="Implementation strategy">
+              <input type="text" class="form-control answer" id="strategy" placeholder="Implementation strategy" autocomplete="off">
             </div>
             <div class="form-group">
               <label for="outcome" class="question">What is the desired outcome of this implementation?</label>
-              <input type="text" class="form-control answer" id="outcome" placeholder="Distal implementation outcome">
+              <input type="text" class="form-control answer" id="outcome" placeholder="Distal implementation outcome" autocomplete="off">
             </div>
             <button class="btn btn-primary mt-4 miro-draggable" style="font-size: 12px !important; font-weight: 400 !important; float: right;" id="8">Drag & Drop<br>to generate CPD</button>
           </form>
