--- a/app.html
+++ b/app.html
@@ -88,6 +88,14 @@
                 <circle cx="50%" cy="40" r="33" class="rect" />
               </svg>
             </div>
+    
+            <div class="col-6 miro-draggable" id="8">
+              <p class="heading">Arrow</p>
+              <svg width="100%" height="80" viewBox="0 4 80 10">
+                <path d="m0,0h80v29H0" fill="#FFF"/>
+                <path d="m61,15H11v-1h49m0-2 9,2.5-9,2.5"/>
+                </svg>
+            </div>
           </div>
         </div>
       </div>
@@ -103,7 +111,7 @@
               <label for="outcome" class="question">What is the desired outcome of this implementation?</label>
               <input type="text" class="form-control answer" id="outcome" placeholder="Distal implementation outcome" autocomplete="off">
             </div>
-            <button class="btn btn-primary mt-4 miro-draggable" style="font-size: 12px !important; font-weight: 400 !important; float: right;" id="8">Drag & Drop<br>to generate CPD</button>
+            <button class="btn btn-primary mt-4 miro-draggable" style="font-size: 12px !important; font-weight: 400 !important; float: right;" id="10">Drag & Drop<br>to generate CPD</button>
           </form>
         </div>
       </div>
