--- a/app.html
+++ b/app.html
@@ -82,7 +82,7 @@
             </div>
     
             <div class="col-6 miro-draggable" id="7" data-bs-toggle="tooltip" data-bs-placement="top" title="The desired implementation outcome">
-              <p class="heading">Distal implementation outcome</p>
+              <p class="heading">Distal outcome</p>
               <svg width="100%" height="80">
                 <circle cx="50%" cy="40" r="33" class="rect" />
               </svg>
@@ -97,6 +97,10 @@
             <div class="form-group pb-4">
               <label for="strategy" class="question">How is the implementation strategy operationally defined?</label>
               <input type="text" class="form-control answer" id="strategy" placeholder="Implementation strategy" autocomplete="off">
+            </div>
+            <div class="form-group">
+              <label for="midcontent" class="question">How is the strategy intended to put in motion?</label>
+              <input type="text" class="form-control answer" id="midcontent" placeholder="Mechanism" autocomplete="off">
             </div>
             <div class="form-group">
               <label for="outcome" class="question">What is the desired outcome of this implementation?</label>
