--- a/app.html
+++ b/app.html
@@ -104,7 +104,7 @@
             </div>
             <div class="form-group">
               <label for="outcome" class="question">What is the desired outcome of this implementation?</label>
-              <input type="text" class="form-control answer" id="outcome" placeholder="Distal implementation outcome" autocomplete="off">
+              <input type="text" class="form-control answer" id="outcome" placeholder="Distal outcome" autocomplete="off">
             </div>
             <button class="btn btn-primary mt-4 miro-draggable" style="font-size: 12px !important; font-weight: 400 !important; float: right;" id="10">Drag & Drop<br>to generate CPD</button>
           </form>
