--- a/app.html
+++ b/app.html
@@ -20,7 +20,6 @@
       <div class="tab-pane fade show active" id="nav-component" role="tabpanel" aria-labelledby="component-tab">
         <div class="container m-0 px-3 py-4 bg-transparent">
           <div class="row m-0 p-0">
-    
             <div class="col-6 miro-draggable" id="1" data-bs-toggle="tooltip" data-bs-placement="top" title="A factor that strengthens or weakens the relationship between the strategy and mechanism">
               <p class="heading">Moderator</p>
               <svg width="100%" height="80" style="text-align: center">
@@ -160,5 +159,9 @@
 }
 .nav-link:hover {
   color: #333;
+}
+.tab-pane {
+  overflow-y: scroll;
+  height: 440px;
 }
 </style>
